--- a/compose.yaml
+++ b/compose.yaml
@@ -8,12 +8,33 @@
 # database or a cache. For examples, see the Awesome Compose repository:
 # https://github.com/docker/awesome-compose
 services:
+  mysql:
+    image: mysql:8.0
+    volumes:
+      - ahead-data:/var/lib/mysql
+    ports:
+      - '3306:3306'
+    environment:
+      MYSQL_ROOT_PASSWORD: secret
+      MYSQL_DATABASE: ahead_db
+
   server:
     build:
       context: .
     ports:
-      - 8000:8000
+      - '8000:8000'
+    volumes:
+      - .:/app
 
+      #for automatic reloading of app when changes are made to source code
+#develop:
+ #     watch:
+  #      - action: rebuild
+   #       path: .
+
+volumes:
+  ahead-data:
+    driver: local
 # The commented out section below is an example of how to define a PostgreSQL
 # database that your application can use. `depends_on` tells Docker Compose to
 # start the database before your application. The `db-data` volume persists the
